--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,12 +18,7 @@ import "@fontsource-variable/raleway";
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-white-smoke text-smoky-black scroll-smooth">
+  <body class="bg-white-smoke text-smoky-black scroll-smooth font-raleway">
     <slot />
   </body>
 </html>
-<style is:global>
-  :root {
-    font-family: "Raleway Variable", sans-serif;
-  }
-</style>
