menu restaurant finished

--- a/src/components/Novedades.astro
+++ b/src/components/Novedades.astro
@@ -9,7 +9,7 @@ import "@fontsource/pacifico";
     <!-- Inicio Card 1 -->
     <div class="row-span-2 h-full">
       <div
-        class="w-full h-72 bg-gradient-to-b from-smoky-black to-princeton-orange rounded-3xl opacity-75 drop-shadow-lg hover:scale-110 hover:transition hover:ease-in-out hover:duration-400 hover:delay-200"
+        class="w-full h-full bg-gradient-to-b from-smoky-black to-princeton-orange rounded-3xl opacity-75 drop-shadow-lg hover:scale-110 hover:transition hover:ease-in-out hover:duration-400 hover:delay-200"
       >
         <div class="flex flex-col">
           <img
