--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import Header from "@/components/Header.astro";
 import Home from "@/components/Home.astro";
+import Menu from "@/components/Menu.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
 <Layout title="Chefcito Gourmet">
   <Header />
-  <main class="flex flex-row items-center justify-center mt-14">
+  <main class="flex flex-col items-center justify-center mt-14">
     <Home />
+    <Menu />
   </main>
 </Layout>
