nosotros & footer components done, changes in buttons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -56,7 +56,7 @@ const navItems = [
         href="https://www.facebook.com/profile.php?id=100068123208897"
         target="_blank"
       >
-        <LogoFB color="#814B09" />
+        <LogoFB color="#814B09" width="50" height="50" />
       </a>
       <a
         class="w-14 h-14 flex items-center justify-center px-3 py-1 rounded-full border-4 border-princeton-orange hover:bg-princeton-orange hover:scale-110 hover:transition hover: ease-in-out hover:duration-300"
@@ -64,7 +64,7 @@ const navItems = [
         href="https://www.instagram.com/chefcito.gourmet/"
         target="_blank"
       >
-        <LogoInstagram color="#814B09" />
+        <LogoInstagram color="#814B09" width="50" height="50" />
       </a>
       <a
         class="w-14 h-14 flex items-center justify-center px-3 py-1 rounded-full border-4 border-princeton-orange hover:bg-princeton-orange hover:scale-110 hover:transition hover: ease-in-out hover:duration-300"
@@ -72,7 +72,7 @@ const navItems = [
         href="https://api.whatsapp.com/send?phone=%2B528341558550&context=ARDe7VytUmvKLQfaL_SetuiwprCTng_MorHA3GlRYkUJm_lsBpFDV8Rsh5W8W4doaAx7g-lRSv5FD3nvu_kZt-FAi1KpmVY_1ew4RJQE1BB-3bal2jcb25EkDWW8f3oBIq4Xt1ksoRFKxwXMJtwHjV5pEA&source=FB_Page&app=facebook&entry_point=page_cta"
         target="_blank"
       >
-        <LogoWA color="#814B09" />
+        <LogoWA color="#814B09" width="50" height="50" />
       </a>
     </section>
   </nav>
