--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
+import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
 import Home from "@/components/Home.astro";
 import Menu from "@/components/Menu.astro";
+import Nosotros from "@/components/Nosotros.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
 
@@ -10,5 +12,7 @@ import Layout from "@/layouts/Layout.astro";
   <main class="flex flex-col items-center justify-center mt-14">
     <Home />
     <Menu />
+    <Nosotros />
   </main>
+  <Footer />
 </Layout>
