--- a/src/components/Novedades.astro
+++ b/src/components/Novedades.astro
@@ -2,7 +2,7 @@
 import "@fontsource/pacifico";
 ---
 
-<section class="mt-20" id="cards">
+<section class="mt-20" id="#novedades">
   <div
     class="grid grid-rows-4 grid-cols-3 grid-flow-row gap-10 items-end justify-between"
   >
