--- a/src/components/icons/LogoFB.astro
+++ b/src/components/icons/LogoFB.astro
@@ -1,10 +1,10 @@
 ---
-const { color } = Astro.props;
+const { color, width, height } = Astro.props;
 ---
 
 <svg
-  width="50px"
-  height="50px"
+  width={`${width}px`}
+  height={`${height}px`}
   viewBox="-5 0 20 20"
   version="1.1"
   xmlns="http://www.w3.org/2000/svg"
