--- a/src/components/icons/LogoInstagram.astro
+++ b/src/components/icons/LogoInstagram.astro
@@ -1,10 +1,10 @@
 ---
-const { color } = Astro.props;
+const { color, width, height } = Astro.props;
 ---
 
 <svg
-  width="50px"
-  height="50px"
+  width={`${width}px`}
+  height={`${height}px`}
   viewBox="0 0 24 24"
   fill="none"
   xmlns="http://www.w3.org/2000/svg"
