path files fixed

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
 import LogoCG from "@/components/icons/LogoCG.astro";
 import LogoFB from "@/components/icons/LogoFB.astro";
-import LogoInstagram from "./icons/LogoInstagram.astro";
-import LogoWA from "./icons/LogoWA.astro";
+import LogoInstagram from "@/components/icons/LogoInstagram.astro";
+import LogoWA from "@/components/icons/LogoWA.astro";
 ---
 
 <footer
