--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -1,7 +1,7 @@
 ---
 import LogoDidi from "@/components/icons/LogoDidi.astro";
 import LogoUberEats from "@/components/icons/LogoUberEats.astro";
-import Novedades from "./Novedades.astro";
+import Novedades from "@/components/Novedades.astro";
 
 /* TODO: 
   - Cards Layout
