--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,9 +1,9 @@
 ---
 import Boneless from "@/components/Boneless.astro";
+import Complementos from "@/components/Complementos.astro";
+import Ensaladas from "@/components/Ensaladas.astro";
+import Hamburguesas from "@/components/Hamburguesas.astro";
 import Salsa from "@/components/Salsa.astro";
-import Complementos from "./Complementos.astro";
-import Ensaladas from "./Ensaladas.astro";
-import Hamburguesas from "./Hamburguesas.astro";
 
 const cardsItems = [
   { id: "SalsaBBQ", title: "BBQ" },
