--- a/src/components/Nosotros.astro
+++ b/src/components/Nosotros.astro
@@ -1,5 +1,5 @@
 ---
-import LogoUbicacion from "./icons/LogoUbicacion.astro";
+import LogoUbicacion from "@/components/icons/LogoUbicacion.astro";
 ---
 
 <section
