footer social media links fixed

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,7 +33,7 @@ import LogoWA from "@/components/icons/LogoWA.astro";
         <a
           class="w-12 h-12 flex items-center justify-center px-3 py-1 rounded-full border-4 border-chocolate hover:bg-tigerseye hover:scale-110 hover:transition hover: ease-in-out hover:duration-300"
           aria-label="facebook"
-          href="https://www.facebook.com/profile.php?id=100068123208897"
+          href="https://www.instagram.com/chefcito.gourmet/"
           target="_blank"
         >
           <LogoInstagram color="#814B09" width="80" height="80" />
@@ -43,7 +43,7 @@ import LogoWA from "@/components/icons/LogoWA.astro";
         <a
           class="w-12 h-12 flex items-center justify-center px-3 py-1 rounded-full border-4 border-chocolate hover:bg-tigerseye hover:scale-110 hover:transition hover: ease-in-out hover:duration-300"
           aria-label="facebook"
-          href="https://www.facebook.com/profile.php?id=100068123208897"
+          href="https://api.whatsapp.com/send?phone=%2B528341558550&context=ARDe7VytUmvKLQfaL_SetuiwprCTng_MorHA3GlRYkUJm_lsBpFDV8Rsh5W8W4doaAx7g-lRSv5FD3nvu_kZt-FAi1KpmVY_1ew4RJQE1BB-3bal2jcb25EkDWW8f3oBIq4Xt1ksoRFKxwXMJtwHjV5pEA&source=FB_Page&app=facebook&entry_point=page_cta"
           target="_blank"
         >
           <LogoWA color="#814B09" width="80" height="80" />
